- Megamenu and Flexmega menu options have been removed
- State template version has been removed
- Sticky Nav option has been removed
- Menu home link option has been removed
- Show Search on Frontpage has been removed
- Utility Header Home link option has been removed
- Social media show in header option has been removed
- Geo Locator option has been removed

CAWeb 1.12.4
- Resolved issue with Colorscheme option when using Customizer
- Changed Search Results to Search results in search page template
- Updated default favicon for v6 to the bear 
- Updated npm pacakges

CAWeb 1.12.3
- Updated npm pacakges

CAWeb 1.12.2
- Updated npm pacakges
- Fixed issue with Google Translate Custom Text option not rendering
- Overriding _admin_bar_bump_cb prevents WP from adding a margin on top of page when logged in. 

CAWeb 1.12.1
- Updated npm pacakges
- Added filter for SearchWP

CAWeb 1.12.0
- Updated build process to better align with upcoming CAWeb projects
- Updated State Template 6.3.2 to new modified by version
- Removed caweb-admin.js from loading on login screen
- Corrected issue cagov core script loading on backend when creating widgets
- Added pagination to Github Module
- Footer Social Share ul element no longer renders if empty
- Changed Search input type from text to search 
- Updated font-icon reference
- Resolved issue with Divi Toggle Icon not rendering
- Resolved deprecation variable not defined in updater
- Resolved PHP Deprecated:  Using ${var} in strings is deprecated, use {$var} instead
- Resolved issue with social share footer icons not being right aligned when no navigation set
- Corrected alert banner sizing issue
- Resolved issue with Post Detail Exam Layout
- Resolved issues with SERP

CAWeb 1.11.3a
- Increased admin_bar_menu priority due to 6.6.1 increase

CAWeb 1.11.3
- Added Utility Header Options back in for v6
- Dropped Flex and Mega Menu Options

CAWeb 1.11.2
- Updated alert cookie from 0 to false

CAWeb 1.11.0
- Added Custom Fields action 