@@ -112,6 +112,7 @@ foreach ( $args as $var => $val ) {
 			if ( has_nav_menu( 'header-menu' ) ) {
 				wp_nav_menu(
 					array(
+						'theme'                     => 'CAWeb',
 						'theme_location'                     => 'header-menu',
 						'caweb_nav_type'                     => $caweb_menu_style,
 						'caweb_google_search_id'             => $caweb_google_search_id,
